--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "trem-tauri"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
+description = "Taiwan Realtime Earthquake Monitoring"
+authors = ["ExpTechTW"]
+license = "APGL-3.0"
 repository = ""
 edition = "2021"
 
@@ -13,7 +13,15 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-file", "fs-create-dir", "fs-read-dir", "path-all", "shell-open"] }
+tauri = { version = "1.5", features = [
+  "system-tray",
+  "fs-write-file",
+  "fs-read-file",
+  "fs-create-dir",
+  "fs-read-dir",
+  "path-all",
+  "shell-open",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
