--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "@types/chroma-js": "^2.4.3",
     "@types/events": "^3.0.3",
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/devtools": "^7.0.14",
     "@vue/language-plugin-pug": "^1.8.27",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "eslint-plugin-vue-pug": "^0.6.1",
+    "prettier": "^3.2.5",
     "pug": "^3.0.2",
-    "typescript": "^5.0.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.5"
   }
