--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint ./src --ext .ts,.vue --fix",
+    "prettier": "prettier ./src"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
