--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-vue-pug": "^0.6.1",
     "prettier": "^3.2.5",
     "pug": "^3.0.2",
+    "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.5"
