feat: replay from file

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^1.5.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
+    "jszip": "^3.10.1",
     "maplibre-gl": "^4.0.0",
     "material-symbols": "^0.14.6",
     "tauri-settings": "^0.3.4",
