--- a/src/assets/json/default_config.json
+++ b/src/assets/json/default_config.json
@@ -8,7 +8,7 @@
   "behavior": {
      "focusWindowWhenEew": true,
      "flashWindowWhenEew": true,
-     "alwaysOnTopWhenEew": true,
+     "alwaysOnTopWhenEew": false,
      "alwaysOnTop": false,
      "streamMode": false,
      "openExternal": false
