--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jszip": "^3.10.1",
     "maplibre-gl": "^4.0.0",
     "material-symbols": "^0.14.6",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "tauri-settings": "^0.3.4",
     "vue": "^3.3.4",
     "ws": "^8.16.0"
