--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,25 +13,28 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [
+tauri = { version = "1.5", features = [ "cli",
   "clipboard-write-text",
   "http-request",
-  "window-set-always-on-top",
-  "window-request-user-attention",
-  "window-set-focus",
-  "window-set-skip-taskbar",
-  "window-show",
-  "window-set-title",
-  "system-tray",
-  "fs-write-file",
-  "fs-read-file",
   "fs-create-dir",
   "fs-read-dir",
+  "fs-read-file",
+  "fs-write-file",
   "path-all",
   "shell-open",
+  "system-tray",
+  "window-close",
+  "window-hide",
+  "window-request-user-attention",
+  "window-set-always-on-top",
+  "window-set-focus",
+  "window-set-skip-taskbar",
+  "window-set-title",
+  "window-show",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
