--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
     "@fontsource/lato": "^5.0.18",
     "@fontsource/noto-sans-tc": "^5.0.17",
     "@fontsource/open-sans": "^5.0.23",
-    "@tauri-apps/api": "^1.5.3",
+    "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-autostart": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-cli": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-http": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-websocket": "^2.0.0-beta.0",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "jszip": "^3.10.1",
     "maplibre-gl": "^4.0.0",
     "material-symbols": "^0.14.6",
-    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
-    "tauri-settings": "^0.3.4",
     "vue": "^3.3.4",
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.8",
+    "@tauri-apps/cli": "^2.0.0-beta.1",
     "@types/chroma-js": "^2.4.3",
     "@types/events": "^3.0.3",
     "@types/ws": "^8.5.10",
