--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0-beta.0",
     "@tauri-apps/plugin-fs": "^2.0.0-beta.0",
     "@tauri-apps/plugin-http": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-log": "^2.0.0-beta.0",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.0",
     "@tauri-apps/plugin-websocket": "^2.0.0-beta.0",
     "chroma-js": "^2.4.2",
