--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,11 +19,12 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 tauri = { version = "2.0.0-beta", features = ["devtools", "tray-icon"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri-plugin-autostart = "2.0.0-beta.0"
-tauri-plugin-cli = "2.0.0-beta.0"
-tauri-plugin-clipboard-manager = "2.0.0-beta.0"
-tauri-plugin-fs = "2.0.0-beta.0"
+tauri-plugin-autostart = "2.0.0-beta"
+tauri-plugin-cli = "2.0.0-beta"
+tauri-plugin-clipboard-manager = "2.0.0-beta"
+tauri-plugin-fs = "2.0.0-beta"
 tauri-plugin-http = "2.0.0-beta"
+tauri-plugin-log = "2.0.0-beta"
 tauri-plugin-shell = "2.0.0-beta"
 tauri-plugin-websocket = "2.0.0-beta"
 
