--- a/.github/ISSUE_TEMPLATE/bug-issue.yml
+++ b/.github/ISSUE_TEMPLATE/bug-issue.yml
@@ -1,6 +1,6 @@
 name: 問題回報
 description: 回報非常明顯的問題。
-title: '[Bug]: '
+title: "[Bug]: "
 labels:
   - 🐛 Bug
 body:
@@ -58,14 +58,14 @@ body:
         記錄檔路徑：
 
         - **Windows**:
-          - `%AppData/trem-tauri.tw.com.exptech/webview.log`
-          - `%AppData/trem-tauri.tw.com.exptech/runtime.log`
+          - `%LocalAppData%/trem-tauri.tw.com.exptech/logs/webview.log`
+          - `%LocalAppData%/trem-tauri.tw.com.exptech/logs/runtime.log`
         - **Linux**:
-          - `$HOME/.config/trem-tauri.tw.com.exptech/webview.log`
-          - `$HOME/.config/trem-tauri.tw.com.exptech/runtime.log`
+          - `$HOME/.config/trem-tauri.tw.com.exptech/logs/webview.log`
+          - `$HOME/.config/trem-tauri.tw.com.exptech/logs/runtime.log`
         - **macOS**:
-          - `/Library/Logs/trem-tauri.tw.com.exptech/webview.log`
-          - `/Library/Logs/trem-tauri.tw.com.exptech/runtime.log`
+          - `/Library/Logs/trem-tauri.tw.com.exptech/logs/webview.log`
+          - `/Library/Logs/trem-tauri.tw.com.exptech/logs/runtime.log`
   - type: input
     id: logs
     attributes:
