--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
     "@tauri-apps/plugin-http": "^2.0.0-beta.2",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
-    "@tauri-apps/plugin-store": "^2.0.0-beta.2",
     "@tauri-apps/plugin-websocket": "^2.0.0-beta.2",
     "chroma-js": "^2.4.2",
     "maplibre-gl": "^4.1.3",
-    "material-symbols": "^0.17.2",
+    "material-symbols": "^0.17.3",
     "pinia": "^2.1.7",
     "primevue": "^4.0.0-beta.1",
     "vue": "^3.4.25",
