--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-http = "2.0.0-beta"
 tauri-plugin-shell = "2.0.0-beta"
 tauri-plugin-single-instance = "2.0.0-beta"
-tauri-plugin-store = "2.0.0-beta"
 tauri-plugin-websocket = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-fs = "2.0.0-beta.6"
