--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prettier": "prettier --write ./src"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/api": "^2.0.0-beta.9",
     "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
     "@tauri-apps/plugin-http": "^2.0.0-beta.2",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@exptechtw/api-wrapper": "github:ExpTechTW/api-wrapper",
-    "@tauri-apps/cli": ">=2.0.0-beta.0",
+    "@tauri-apps/cli": "^2.0.0-beta.13",
     "@types/chroma-js": "^2.4.4",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
