--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
     "@tauri-apps/plugin-websocket": "^2.0.0-beta.2",
     "chroma-js": "^2.4.2",
+    "jszip": "^3.10.1",
     "maplibre-gl": "^4.1.3",
     "material-symbols": "^0.17.3",
     "pinia": "^2.1.7",
