--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^2.0.0-beta.9",
     "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
     "@tauri-apps/plugin-http": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-os": "^2.0.0-beta.3",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
     "@tauri-apps/plugin-websocket": "^2.0.0-beta.2",
     "chroma-js": "^2.4.2",
