--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,3 +19,4 @@ tauri-plugin-websocket = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2.0.0-beta.6"
+tauri-plugin-os = "2.0.0-beta.4"
