--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,3 +20,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2.0.0-beta.6"
 tauri-plugin-os = "2.0.0-beta.4"
+whoami = "1.5.1"
