--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trem-tauri",
   "private": true,
-  "version": "0.1.0-nightly-20240501",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
