--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trem-tauri",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.0-nightly-20240527",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,29 +12,29 @@
     "prettier": "prettier --write ./src"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.0-beta.9",
-    "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
-    "@tauri-apps/plugin-http": "^2.0.0-beta.2",
+    "@tauri-apps/api": "^2.0.0-beta.12",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
+    "@tauri-apps/plugin-http": "^2.0.0-beta.3",
     "@tauri-apps/plugin-os": "^2.0.0-beta.3",
-    "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
-    "@tauri-apps/plugin-websocket": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.4",
+    "@tauri-apps/plugin-websocket": "^2.0.0-beta.3",
     "chroma-js": "^2.4.2",
     "jszip": "^3.10.1",
-    "maplibre-gl": "^4.1.3",
-    "material-symbols": "^0.17.3",
+    "maplibre-gl": "^4.3.2",
+    "material-symbols": "^0.18.0",
     "pinia": "^2.1.7",
-    "primevue": "^4.0.0-beta.1",
-    "vue": "^3.4.25",
+    "primevue": "^4.0.0-beta.3",
+    "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@exptechtw/api-wrapper": "github:ExpTechTW/api-wrapper",
     "@tauri-apps/cli": "^2.0.0-beta.13",
     "@types/chroma-js": "^2.4.4",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.4.5",
-    "vite": "^5.2.10",
-    "vue-tsc": "^1.8.27"
+    "vite": "^5.2.11",
+    "vue-tsc": "^2.0.19"
   }
 }
