--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,4 @@ serde_json = "1"
 tauri-plugin-fs = "2.0.0-beta.6"
 tauri-plugin-os = "2.0.0-beta.4"
 whoami = "1.5.1"
+windows = { version = "0.56.0", features = ["Win32_UI_Shell"] }
